Remove public folder, keep only docs

--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@ baseURL: "http://manbudiman.github.io/"
 languageCode: "en-us"
 title: "Pustaka Budiman"
 theme: "hugo-xmin"
-publishDir: docs
+publishDir: "docs"
 
 googleAnalytics: ""
 disqusShortname: ""
